syntax = 'proto3';

package astria.signer.v1;

message RoundTwoResponse {
    bytes signature_share = 1;
}
